# summed_field_method

examples/cli/: Cargo.toml
examples/cli/src/: main.rs  sfm.json
