[package]
name = "sfmcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
ndarray =  { version = "0.15", features = ["rayon"]}
num-complex = "0.4"
palette = "0.7.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
summed_field_method = { path = "../../" }
